Fix applying double log

--- a/notebooks/select_features.ipynb
+++ b/notebooks/select_features.ipynb
@@ -265,7 +265,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "feat_vectors = np.log1p(R[:, selected].T)  # [2000, 17] — each row is a feature's role profile\n",
+    "feat_vectors = R[:, selected].T  # [2000, 17] — each row is a feature's role profile\n",
     "\n",
     "feat_umap = UMAP(\n",
     "    n_components=2, metric=\"cosine\",\n",
